--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+/* This injects Tailwind's base styles and any base styles registered by plugins. */
+@tailwind base;
+/* This injects Tailwind's component classes and any component classes registered by plugins. */
+@tailwind components;
+/* This injects Tailwind's utility classes and any utility classes registered by plugins. */
+@tailwind utilities;
+
+/*
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -66,3 +74,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+*/
