--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,14 @@
 /* This injects Tailwind's utility classes and any utility classes registered by plugins. */
 @tailwind utilities;
 
+@layer base {
+	input[type='number']::-webkit-inner-spin-button,
+	input[type='number']::-webkit-outer-spin-button {
+		-webkit-appearance: none;
+		margin: 0;
+	}
+}
+
 /*
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
